--- a/Droid/BoxRendererTest.Droid.csproj
+++ b/Droid/BoxRendererTest.Droid.csproj
@@ -87,11 +87,16 @@
       <Project>{46F825BB-7233-47C9-904C-C7F4C9E5BEAE}</Project>
       <Name>BoxRendererTest</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{9F413445-3CDA-4DB0-8C3E-A4367435046E}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="GraphViewRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
