--- a/BoxRendererTest/BoxRendererTest.csproj
+++ b/BoxRendererTest/BoxRendererTest.csproj
@@ -28,9 +28,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="BoxRendererTest.cs" />
+    <Compile Include="App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GraphView.cs" />
+    <Compile Include="BoxClip.cs" />
+    <Compile Include="GraphPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
