--- a/Droid/BoxRendererTest.Droid.csproj
+++ b/Droid/BoxRendererTest.Droid.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GraphViewRenderer.cs" />
+    <Compile Include="BoxClipRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
