--- a/BoxRendererTest/BoxRendererTest.csproj
+++ b/BoxRendererTest/BoxRendererTest.csproj
@@ -31,9 +31,8 @@
     <Compile Include="App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GraphView.cs" />
-    <Compile Include="BoxClip.cs" />
     <Compile Include="GraphPage.cs" />
-    <Compile Include="BarChart.cs" />
+    <Compile Include="StackedBarChartPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
